{
  "version": 4,
  "terraform_version": "1.15.3",
  "serial": 66,
  "lineage": "2341918d-5a58-ca57-0534-5210b365d7ee",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "private_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:388779989543:subnet/subnet-0d596107f4edd9784",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "available_ip_address_count": 4085,
            "cidr_block": "10.0.128.0/20",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d596107f4edd9784",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "388779989543",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "DevOps-subnet-private1-ap-south-1a"
            },
            "vpc_id": "vpc-08fa4d8bffbe53a5e"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "private_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:388779989543:subnet/subnet-0d666a5e8d8974624",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "available_ip_address_count": 4085,
            "cidr_block": "10.0.144.0/20",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d666a5e8d8974624",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "388779989543",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "DevOps-subnet-private2-ap-south-1b"
            },
            "vpc_id": "vpc-08fa4d8bffbe53a5e"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "public_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:388779989543:subnet/subnet-040fca137a2251b25",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "available_ip_address_count": 4090,
            "cidr_block": "10.0.0.0/20",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-040fca137a2251b25",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "388779989543",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "DevOps-subnet-public1-ap-south-1a"
            },
            "vpc_id": "vpc-08fa4d8bffbe53a5e"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "public_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:388779989543:subnet/subnet-02079f89fad00fad6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "available_ip_address_count": 4090,
            "cidr_block": "10.0.16.0/20",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02079f89fad00fad6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "388779989543",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "DevOps-subnet-public2-ap-south-1b"
            },
            "vpc_id": "vpc-08fa4d8bffbe53a5e"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "devops",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:388779989543:vpc/vpc-08fa4d8bffbe53a5e",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-06af29391fffec67d",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-01c60e072da17df08",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08fa4d8bffbe53a5e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0922819f2a43400be",
            "owner_id": "388779989543",
            "tags": {
              "Name": "DevOps-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.compute_backend",
      "mode": "managed",
      "type": "aws_instance",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-055850e947ba3cedc",
            "arn": "arn:aws:ec2:ap-south-1:388779989543:instance/i-0f4cec4bdd57e7e65",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "bmi-ec2-profile-20260612045542616200000005",
            "id": "i-0f4cec4bdd57e7e65",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "enabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09efc01e8d23e285f",
            "private_dns": "ip-10-0-141-158.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.141.158",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-south-1:388779989543:key/c122a720-3d6b-436c-8415-78d7f9493a82",
                "tags_all": {
                  "Environment": "demo",
                  "ManagedBy": "Terraform",
                  "Project": "BMI-AutoScaling"
                },
                "throughput": 125,
                "volume_id": "vol-0bccc789134051dcb",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d596107f4edd9784",
            "tags": {
              "Application": "BMI Health Tracker",
              "CostCenter": "Training",
              "Course": "Ostad-DevOps-Batch-11",
              "Name": "bmi-backend-1",
              "Owner": "osatad",
              "Terraform": "true"
            },
            "tags_all": {
              "Application": "BMI Health Tracker",
              "CostCenter": "Training",
              "Course": "Ostad-DevOps-Batch-11",
              "Environment": "demo",
              "ManagedBy": "Terraform",
              "Name": "bmi-backend-1",
              "Owner": "osatad",
              "Project": "BMI-AutoScaling",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-091c95b7954645ab7"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_caller_identity.current",
            "data.aws_subnet.private_1a",
            "data.aws_subnet.private_1b",
            "data.aws_subnet.public_1a",
            "data.aws_subnet.public_1b",
            "data.aws_vpc.devops",
            "module.compute_backend.data.template_file.backend_userdata",
            "module.database.aws_db_subnet_group.aurora",
            "module.database.aws_rds_cluster.aurora",
            "module.database.aws_rds_cluster_instance.aurora_instance",
            "module.database.aws_security_group.aurora",
            "module.iam.aws_iam_instance_profile.ec2_profile",
            "module.iam.aws_iam_role.ec2_role",
            "module.iam.aws_iam_role_policy.parameter_store_policy",
            "module.iam.aws_iam_role_policy_attachment.cloudwatch_policy",
            "module.iam.aws_iam_role_policy_attachment.ssm_policy",
            "module.load_balancing.aws_lb.backend",
            "module.load_balancing.aws_lb.frontend",
            "module.load_balancing.aws_lb_listener.backend",
            "module.load_balancing.aws_lb_listener.frontend",
            "module.load_balancing.aws_lb_target_group.backend",
            "module.load_balancing.aws_lb_target_group.frontend",
            "module.network.aws_security_group.backend_alb",
            "module.network.aws_security_group.backend_ec2",
            "module.network.aws_security_group.frontend_alb",
            "module.network.aws_security_group.frontend_ec2",
            "module.network.aws_security_group.ssm_endpoint",
            "module.network.aws_vpc_endpoint.ec2messages",
            "module.network.aws_vpc_endpoint.ssm",
            "module.network.aws_vpc_endpoint.ssmmessages",
            "module.network.data.aws_region.current",
            "module.parameter_store.aws_ssm_parameter.backend_alb_url",
            "module.parameter_store.aws_ssm_parameter.db_host",
            "module.parameter_store.aws_ssm_parameter.db_name",
            "module.parameter_store.aws_ssm_parameter.db_password",
            "module.parameter_store.aws_ssm_parameter.db_user"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-055850e947ba3cedc",
            "arn": "arn:aws:ec2:ap-south-1:388779989543:instance/i-015bee929f1604b1b",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "bmi-ec2-profile-20260612045542616200000005",
            "id": "i-015bee929f1604b1b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "enabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01cbd4812a2e4d206",
            "private_dns": "ip-10-0-158-75.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.158.75",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-south-1:388779989543:key/c122a720-3d6b-436c-8415-78d7f9493a82",
                "tags_all": {
                  "Environment": "demo",
                  "ManagedBy": "Terraform",
                  "Project": "BMI-AutoScaling"
                },
                "throughput": 125,
                "volume_id": "vol-0ca8fb586cf6280cb",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d666a5e8d8974624",
            "tags": {
              "Application": "BMI Health Tracker",
              "CostCenter": "Training",
              "Course": "Ostad-DevOps-Batch-11",
              "Name": "bmi-backend-2",
              "Owner": "osatad",
              "Terraform": "true"
            },
            "tags_all": {
              "Application": "BMI Health Tracker",
              "CostCenter": "Training",
              "Course": "Ostad-DevOps-Batch-11",
              "Environment": "demo",
              "ManagedBy": "Terraform",
              "Name": "bmi-backend-2",
              "Owner": "osatad",
              "Project": "BMI-AutoScaling",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-091c95b7954645ab7"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_caller_identity.current",
            "data.aws_subnet.private_1a",
            "data.aws_subnet.private_1b",
            "data.aws_subnet.public_1a",
            "data.aws_subnet.public_1b",
            "data.aws_vpc.devops",
            "module.compute_backend.data.template_file.backend_userdata",
            "module.database.aws_db_subnet_group.aurora",
            "module.database.aws_rds_cluster.aurora",
            "module.database.aws_rds_cluster_instance.aurora_instance",
            "module.database.aws_security_group.aurora",
            "module.iam.aws_iam_instance_profile.ec2_profile",
            "module.iam.aws_iam_role.ec2_role",
            "module.iam.aws_iam_role_policy.parameter_store_policy",
            "module.iam.aws_iam_role_policy_attachment.cloudwatch_policy",
            "module.iam.aws_iam_role_policy_attachment.ssm_policy",
            "module.load_balancing.aws_lb.backend",
            "module.load_balancing.aws_lb.frontend",
            "module.load_balancing.aws_lb_listener.backend",
            "module.load_balancing.aws_lb_listener.frontend",
            "module.load_balancing.aws_lb_target_group.backend",
            "module.load_balancing.aws_lb_target_group.frontend",
            "module.network.aws_security_group.backend_alb",
            "module.network.aws_security_group.backend_ec2",
            "module.network.aws_security_group.frontend_alb",
            "module.network.aws_security_group.frontend_ec2",
            "module.network.aws_security_group.ssm_endpoint",
            "module.network.aws_vpc_endpoint.ec2messages",
            "module.network.aws_vpc_endpoint.ssm",
            "module.network.aws_vpc_endpoint.ssmmessages",
            "module.network.data.aws_region.current",
            "module.parameter_store.aws_ssm_parameter.backend_alb_url",
            "module.parameter_store.aws_ssm_parameter.db_host",
            "module.parameter_store.aws_ssm_parameter.db_name",
            "module.parameter_store.aws_ssm_parameter.db_password",
            "module.parameter_store.aws_ssm_parameter.db_user"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.compute_backend",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:388779989543:targetgroup/bmibe-20260612045635971400000012/db898dcef69b2418-20260612055320873500000003",
            "port": 3000,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:388779989543:targetgroup/bmibe-20260612045635971400000012/db898dcef69b2418",
            "target_id": "i-0f4cec4bdd57e7e65"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_caller_identity.current",
            "data.aws_subnet.private_1a",
            "data.aws_subnet.private_1b",
            "data.aws_subnet.public_1a",
            "data.aws_subnet.public_1b",
            "data.aws_vpc.devops",
            "module.compute_backend.aws_instance.backend",
            "module.compute_backend.data.template_file.backend_userdata",
            "module.database.aws_db_subnet_group.aurora",
            "module.database.aws_rds_cluster.aurora",
            "module.database.aws_rds_cluster_instance.aurora_instance",
            "module.database.aws_security_group.aurora",
            "module.iam.aws_iam_instance_profile.ec2_profile",
            "module.iam.aws_iam_role.ec2_role",
            "module.iam.aws_iam_role_policy.parameter_store_policy",
            "module.iam.aws_iam_role_policy_attachment.cloudwatch_policy",
            "module.iam.aws_iam_role_policy_attachment.ssm_policy",
            "module.load_balancing.aws_lb.backend",
            "module.load_balancing.aws_lb.frontend",
            "module.load_balancing.aws_lb_listener.backend",
            "module.load_balancing.aws_lb_listener.frontend",
            "module.load_balancing.aws_lb_target_group.backend",
            "module.load_balancing.aws_lb_target_group.frontend",
            "module.network.aws_security_group.backend_alb",
            "module.network.aws_security_group.backend_ec2",
            "module.network.aws_security_group.frontend_alb",
            "module.network.aws_security_group.frontend_ec2",
            "module.network.aws_security_group.ssm_endpoint",
            "module.network.aws_vpc_endpoint.ec2messages",
            "module.network.aws_vpc_endpoint.ssm",
            "module.network.aws_vpc_endpoint.ssmmessages",
            "module.network.data.aws_region.current",
            "module.parameter_store.aws_ssm_parameter.backend_alb_url",
            "module.parameter_store.aws_ssm_parameter.db_host",
            "module.parameter_store.aws_ssm_parameter.db_name",
            "module.parameter_store.aws_ssm_parameter.db_password",
            "module.parameter_store.aws_ssm_parameter.db_user"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:388779989543:targetgroup/bmibe-20260612045635971400000012/db898dcef69b2418-20260612055320959900000004",
            "port": 3000,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:388779989543:targetgroup/bmibe-20260612045635971400000012/db898dcef69b2418",
            "target_id": "i-015bee929f1604b1b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_caller_identity.current",
            "data.aws_subnet.private_1a",
            "data.aws_subnet.private_1b",
            "data.aws_subnet.public_1a",
            "data.aws_subnet.public_1b",
            "data.aws_vpc.devops",
            "module.compute_backend.aws_instance.backend",
            "module.compute_backend.data.template_file.backend_userdata",
            "module.database.aws_db_subnet_group.aurora",
            "module.database.aws_rds_cluster.aurora",
            "module.database.aws_rds_cluster_instance.aurora_instance",
            "module.database.aws_security_group.aurora",
            "module.iam.aws_iam_instance_profile.ec2_profile",
            "module.iam.aws_iam_role.ec2_role",
            "module.iam.aws_iam_role_policy.parameter_store_policy",
            "module.iam.aws_iam_role_policy_attachment.cloudwatch_policy",
            "module.iam.aws_iam_role_policy_attachment.ssm_policy",
            "module.load_balancing.aws_lb.backend",
            "module.load_balancing.aws_lb.frontend",
            "module.load_balancing.aws_lb_listener.backend",
            "module.load_balancing.aws_lb_listener.frontend",
            "module.load_balancing.aws_lb_target_group.backend",
            "module.load_balancing.aws_lb_target_group.frontend",
            "module.network.aws_security_group.backend_alb",
            "module.network.aws_security_group.backend_ec2",
            "module.network.aws_security_group.frontend_alb",
            "module.network.aws_security_group.frontend_ec2",
            "module.network.aws_security_group.ssm_endpoint",
            "module.network.aws_vpc_endpoint.ec2messages",
            "module.network.aws_vpc_endpoint.ssm",
            "module.network.aws_vpc_endpoint.ssmmessages",
            "module.network.data.aws_region.current",
            "module.parameter_store.aws_ssm_parameter.backend_alb_url",
            "module.parameter_store.aws_ssm_parameter.db_host",
            "module.parameter_store.aws_ssm_parameter.db_name",
            "module.parameter_store.aws_ssm_parameter.db_password",
            "module.parameter_store.aws_ssm_parameter.db_user"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.database",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aurora",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:388779989543:security-group/sg-0b59ff1ce71baa4d0",
            "description": "Security group for Aurora PostgreSQL",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b59ff1ce71baa4d0",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from Backend EC2",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-091c95b7954645ab7"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "bmi-aurora-20260612045635971400000011",
            "name_prefix": "bmi-aurora-",
            "owner_id": "388779989543",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "BMI Health Tracker",
              "CostCenter": "Training",
              "Course": "Ostad-DevOps-Batch-11",
              "Name": "bmi-aurora-sg",
              "Owner": "osatad",
              "Terraform": "true"
            },
            "tags_all": {
              "Application": "BMI Health Tracker",
              "CostCenter": "Training",
              "Course": "Ostad-DevOps-Batch-11",
              "Environment": "demo",
              "ManagedBy": "Terraform",
              "Name": "bmi-aurora-sg",
              "Owner": "osatad",
              "Project": "BMI-AutoScaling",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-08fa4d8bffbe53a5e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_subnet.private_1a",
            "data.aws_subnet.private_1b",
            "data.aws_subnet.public_1a",
            "data.aws_subnet.public_1b",
            "data.aws_vpc.devops",
            "module.network.aws_security_group.backend_alb",
            "module.network.aws_security_group.backend_ec2",
            "module.network.aws_security_group.frontend_alb",
            "module.network.aws_security_group.frontend_ec2",
            "module.network.aws_security_group.ssm_endpoint",
            "module.network.aws_vpc_endpoint.ec2messages",
            "module.network.aws_vpc_endpoint.ssm",
            "module.network.aws_vpc_endpoint.ssmmessages",
            "module.network.data.aws_region.current"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.load_balancing",
      "mode": "managed",
      "type": "aws_lb",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:388779989543:loadbalancer/app/bmibe20260612045635971400000010/d9d40533106af8f6",
            "arn_suffix": "app/bmibe20260612045635971400000010/d9d40533106af8f6",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-bmibe20260612045635971400000010-1213188500.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:388779989543:loadbalancer/app/bmibe20260612045635971400000010/d9d40533106af8f6",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "bmibe20260612045635971400000010",
            "name_prefix": "bmibe",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0f092a2113587408c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0d596107f4edd9784"
              },
              {
                "subnet_id": "subnet-0d666a5e8d8974624"
              }
            ],
            "subnets": [
              "subnet-0d596107f4edd9784",
              "subnet-0d666a5e8d8974624"
            ],
            "tags": {
              "Application": "BMI Health Tracker",
              "CostCenter": "Training",
              "Course": "Ostad-DevOps-Batch-11",
              "Name": "bmi-backend-alb",
              "Owner": "osatad",
              "Terraform": "true"
            },
            "tags_all": {
              "Application": "BMI Health Tracker",
              "CostCenter": "Training",
              "Course": "Ostad-DevOps-Batch-11",
              "Environment": "demo",
              "ManagedBy": "Terraform",
              "Name": "bmi-backend-alb",
              "Owner": "osatad",
              "Project": "BMI-AutoScaling",
              "Terraform": "true"
            },
            "vpc_id": "vpc-08fa4d8bffbe53a5e",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_subnet.private_1a",
            "data.aws_subnet.private_1b",
            "data.aws_subnet.public_1a",
            "data.aws_subnet.public_1b",
            "data.aws_vpc.devops",
            "module.network.aws_security_group.backend_alb",
            "module.network.aws_security_group.backend_ec2",
            "module.network.aws_security_group.frontend_alb",
            "module.network.aws_security_group.frontend_ec2",
            "module.network.aws_security_group.ssm_endpoint",
            "module.network.aws_vpc_endpoint.ec2messages",
            "module.network.aws_vpc_endpoint.ssm",
            "module.network.aws_vpc_endpoint.ssmmessages",
            "module.network.data.aws_region.current"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.load_balancing",
      "mode": "managed",
      "type": "aws_lb",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:388779989543:loadbalancer/app/bmife-2026061204563597090000000f/cf22ef53aedb4520",
            "arn_suffix": "app/bmife-2026061204563597090000000f/cf22ef53aedb4520",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "bmife-2026061204563597090000000f-8667097.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:388779989543:loadbalancer/app/bmife-2026061204563597090000000f/cf22ef53aedb4520",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "bmife-2026061204563597090000000f",
            "name_prefix": "bmife-",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0371b13625ebcf678"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02079f89fad00fad6"
              },
              {
                "subnet_id": "subnet-040fca137a2251b25"
              }
            ],
            "subnets": [
              "subnet-02079f89fad00fad6",
              "subnet-040fca137a2251b25"
            ],
            "tags": {
              "Application": "BMI Health Tracker",
              "CostCenter": "Training",
              "Course": "Ostad-DevOps-Batch-11",
              "Name": "bmi-frontend-alb",
              "Owner": "osatad",
              "Terraform": "true"
            },
            "tags_all": {
              "Application": "BMI Health Tracker",
              "CostCenter": "Training",
              "Course": "Ostad-DevOps-Batch-11",
              "Environment": "demo",
              "ManagedBy": "Terraform",
              "Name": "bmi-frontend-alb",
              "Owner": "osatad",
              "Project": "BMI-AutoScaling",
              "Terraform": "true"
            },
            "vpc_id": "vpc-08fa4d8bffbe53a5e",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_subnet.private_1a",
            "data.aws_subnet.private_1b",
            "data.aws_subnet.public_1a",
            "data.aws_subnet.public_1b",
            "data.aws_vpc.devops",
            "module.network.aws_security_group.backend_alb",
            "module.network.aws_security_group.backend_ec2",
            "module.network.aws_security_group.frontend_alb",
            "module.network.aws_security_group.frontend_ec2",
            "module.network.aws_security_group.ssm_endpoint",
            "module.network.aws_vpc_endpoint.ec2messages",
            "module.network.aws_vpc_endpoint.ssm",
            "module.network.aws_vpc_endpoint.ssmmessages",
            "module.network.data.aws_region.current"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.load_balancing",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:388779989543:listener/app/bmibe20260612045635971400000010/d9d40533106af8f6/3c15e2ca9927c445",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:388779989543:targetgroup/bmibe-20260612045635971400000012/db898dcef69b2418",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:388779989543:listener/app/bmibe20260612045635971400000010/d9d40533106af8f6/3c15e2ca9927c445",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:388779989543:loadbalancer/app/bmibe20260612045635971400000010/d9d40533106af8f6",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "Application": "BMI Health Tracker",
              "CostCenter": "Training",
              "Course": "Ostad-DevOps-Batch-11",
              "Owner": "osatad",
              "Terraform": "true"
            },
            "tags_all": {
              "Application": "BMI Health Tracker",
              "CostCenter": "Training",
              "Course": "Ostad-DevOps-Batch-11",
              "Environment": "demo",
              "ManagedBy": "Terraform",
              "Owner": "osatad",
              "Project": "BMI-AutoScaling",
              "Terraform": "true"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_subnet.private_1a",
            "data.aws_subnet.private_1b",
            "data.aws_subnet.public_1a",
            "data.aws_subnet.public_1b",
            "data.aws_vpc.devops",
            "module.load_balancing.aws_lb.backend",
            "module.load_balancing.aws_lb_target_group.backend",
            "module.network.aws_security_group.backend_alb",
            "module.network.aws_security_group.backend_ec2",
            "module.network.aws_security_group.frontend_alb",
            "module.network.aws_security_group.frontend_ec2",
            "module.network.aws_security_group.ssm_endpoint",
            "module.network.aws_vpc_endpoint.ec2messages",
            "module.network.aws_vpc_endpoint.ssm",
            "module.network.aws_vpc_endpoint.ssmmessages",
            "module.network.data.aws_region.current"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.load_balancing",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:388779989543:listener/app/bmife-2026061204563597090000000f/cf22ef53aedb4520/efdb65e8b1e4180c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:388779989543:targetgroup/bmife-20260612045635971400000013/830aeee50e6ad69a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:388779989543:listener/app/bmife-2026061204563597090000000f/cf22ef53aedb4520/efdb65e8b1e4180c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:388779989543:loadbalancer/app/bmife-2026061204563597090000000f/cf22ef53aedb4520",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "Application": "BMI Health Tracker",
              "CostCenter": "Training",
              "Course": "Ostad-DevOps-Batch-11",
              "Owner": "osatad",
              "Terraform": "true"
            },
            "tags_all": {
              "Application": "BMI Health Tracker",
              "CostCenter": "Training",
              "Course": "Ostad-DevOps-Batch-11",
              "Environment": "demo",
              "ManagedBy": "Terraform",
              "Owner": "osatad",
              "Project": "BMI-AutoScaling",
              "Terraform": "true"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_subnet.private_1a",
            "data.aws_subnet.private_1b",
            "data.aws_subnet.public_1a",
            "data.aws_subnet.public_1b",
            "data.aws_vpc.devops",
            "module.load_balancing.aws_lb.frontend",
            "module.load_balancing.aws_lb_target_group.frontend",
            "module.network.aws_security_group.backend_alb",
            "module.network.aws_security_group.backend_ec2",
            "module.network.aws_security_group.frontend_alb",
            "module.network.aws_security_group.frontend_ec2",
            "module.network.aws_security_group.ssm_endpoint",
            "module.network.aws_vpc_endpoint.ec2messages",
            "module.network.aws_vpc_endpoint.ssm",
            "module.network.aws_vpc_endpoint.ssmmessages",
            "module.network.data.aws_region.current"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.load_balancing",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:388779989543:targetgroup/bmibe-20260612045635971400000012/db898dcef69b2418",
            "arn_suffix": "targetgroup/bmibe-20260612045635971400000012/db898dcef69b2418",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 10,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:388779989543:targetgroup/bmibe-20260612045635971400000012/db898dcef69b2418",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:388779989543:loadbalancer/app/bmibe20260612045635971400000010/d9d40533106af8f6"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "bmibe-20260612045635971400000012",
            "name_prefix": "bmibe-",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Application": "BMI Health Tracker",
              "CostCenter": "Training",
              "Course": "Ostad-DevOps-Batch-11",
              "Name": "bmi-backend-tg",
              "Owner": "osatad",
              "Terraform": "true"
            },
            "tags_all": {
              "Application": "BMI Health Tracker",
              "CostCenter": "Training",
              "Course": "Ostad-DevOps-Batch-11",
              "Environment": "demo",
              "ManagedBy": "Terraform",
              "Name": "bmi-backend-tg",
              "Owner": "osatad",
              "Project": "BMI-AutoScaling",
              "Terraform": "true"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-08fa4d8bffbe53a5e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_subnet.private_1a",
            "data.aws_subnet.private_1b",
            "data.aws_subnet.public_1a",
            "data.aws_subnet.public_1b",
            "data.aws_vpc.devops",
            "module.network.aws_security_group.backend_alb",
            "module.network.aws_security_group.backend_ec2",
            "module.network.aws_security_group.frontend_alb",
            "module.network.aws_security_group.frontend_ec2",
            "module.network.aws_security_group.ssm_endpoint",
            "module.network.aws_vpc_endpoint.ec2messages",
            "module.network.aws_vpc_endpoint.ssm",
            "module.network.aws_vpc_endpoint.ssmmessages",
            "module.network.data.aws_region.current"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.load_balancing",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:388779989543:targetgroup/bmife-20260612045635971400000013/830aeee50e6ad69a",
            "arn_suffix": "targetgroup/bmife-20260612045635971400000013/830aeee50e6ad69a",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:388779989543:targetgroup/bmife-20260612045635971400000013/830aeee50e6ad69a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:388779989543:loadbalancer/app/bmife-2026061204563597090000000f/cf22ef53aedb4520"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "bmife-20260612045635971400000013",
            "name_prefix": "bmife-",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Application": "BMI Health Tracker",
              "CostCenter": "Training",
              "Course": "Ostad-DevOps-Batch-11",
              "Name": "bmi-frontend-tg",
              "Owner": "osatad",
              "Terraform": "true"
            },
            "tags_all": {
              "Application": "BMI Health Tracker",
              "CostCenter": "Training",
              "Course": "Ostad-DevOps-Batch-11",
              "Environment": "demo",
              "ManagedBy": "Terraform",
              "Name": "bmi-frontend-tg",
              "Owner": "osatad",
              "Project": "BMI-AutoScaling",
              "Terraform": "true"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-08fa4d8bffbe53a5e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_subnet.private_1a",
            "data.aws_subnet.private_1b",
            "data.aws_subnet.public_1a",
            "data.aws_subnet.public_1b",
            "data.aws_vpc.devops",
            "module.network.aws_security_group.backend_alb",
            "module.network.aws_security_group.backend_ec2",
            "module.network.aws_security_group.frontend_alb",
            "module.network.aws_security_group.frontend_ec2",
            "module.network.aws_security_group.ssm_endpoint",
            "module.network.aws_vpc_endpoint.ec2messages",
            "module.network.aws_vpc_endpoint.ssm",
            "module.network.aws_vpc_endpoint.ssmmessages",
            "module.network.data.aws_region.current"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:388779989543:security-group/sg-0f092a2113587408c",
            "description": "Security group for Backend Internal ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f092a2113587408c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from Frontend EC2",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f6f5a342caf5bb0b"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "bmi-backend-alb-2026061204554558550000000c",
            "name_prefix": "bmi-backend-alb-",
            "owner_id": "388779989543",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "BMI Health Tracker",
              "CostCenter": "Training",
              "Course": "Ostad-DevOps-Batch-11",
              "Name": "bmi-backend-alb-sg",
              "Owner": "osatad",
              "Terraform": "true"
            },
            "tags_all": {
              "Application": "BMI Health Tracker",
              "CostCenter": "Training",
              "Course": "Ostad-DevOps-Batch-11",
              "Environment": "demo",
              "ManagedBy": "Terraform",
              "Name": "bmi-backend-alb-sg",
              "Owner": "osatad",
              "Project": "BMI-AutoScaling",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-08fa4d8bffbe53a5e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.devops",
            "module.network.aws_security_group.frontend_alb",
            "module.network.aws_security_group.frontend_ec2"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:388779989543:security-group/sg-091c95b7954645ab7",
            "description": "Security group for Backend EC2 instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-091c95b7954645ab7",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Port 3000 from Backend ALB",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f092a2113587408c"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "bmi-backend-ec2-2026061204554807040000000d",
            "name_prefix": "bmi-backend-ec2-",
            "owner_id": "388779989543",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "BMI Health Tracker",
              "CostCenter": "Training",
              "Course": "Ostad-DevOps-Batch-11",
              "Name": "bmi-backend-ec2-sg",
              "Owner": "osatad",
              "Terraform": "true"
            },
            "tags_all": {
              "Application": "BMI Health Tracker",
              "CostCenter": "Training",
              "Course": "Ostad-DevOps-Batch-11",
              "Environment": "demo",
              "ManagedBy": "Terraform",
              "Name": "bmi-backend-ec2-sg",
              "Owner": "osatad",
              "Project": "BMI-AutoScaling",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-08fa4d8bffbe53a5e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.devops",
            "module.network.aws_security_group.backend_alb",
            "module.network.aws_security_group.frontend_alb",
            "module.network.aws_security_group.frontend_ec2"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:388779989543:security-group/sg-0371b13625ebcf678",
            "description": "Security group for Frontend ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0371b13625ebcf678",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "bmi-frontend-alb-20260612045540460400000003",
            "name_prefix": "bmi-frontend-alb-",
            "owner_id": "388779989543",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "BMI Health Tracker",
              "CostCenter": "Training",
              "Course": "Ostad-DevOps-Batch-11",
              "Name": "bmi-frontend-alb-sg",
              "Owner": "osatad",
              "Terraform": "true"
            },
            "tags_all": {
              "Application": "BMI Health Tracker",
              "CostCenter": "Training",
              "Course": "Ostad-DevOps-Batch-11",
              "Environment": "demo",
              "ManagedBy": "Terraform",
              "Name": "bmi-frontend-alb-sg",
              "Owner": "osatad",
              "Project": "BMI-AutoScaling",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-08fa4d8bffbe53a5e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.devops"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:388779989543:security-group/sg-0f6f5a342caf5bb0b",
            "description": "Security group for Frontend EC2 instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f6f5a342caf5bb0b",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "HTTPS within VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "HTTP from Frontend ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0371b13625ebcf678"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "bmi-frontend-ec2-2026061204554307830000000a",
            "name_prefix": "bmi-frontend-ec2-",
            "owner_id": "388779989543",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "BMI Health Tracker",
              "CostCenter": "Training",
              "Course": "Ostad-DevOps-Batch-11",
              "Name": "bmi-frontend-ec2-sg",
              "Owner": "osatad",
              "Terraform": "true"
            },
            "tags_all": {
              "Application": "BMI Health Tracker",
              "CostCenter": "Training",
              "Course": "Ostad-DevOps-Batch-11",
              "Environment": "demo",
              "ManagedBy": "Terraform",
              "Name": "bmi-frontend-ec2-sg",
              "Owner": "osatad",
              "Project": "BMI-AutoScaling",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-08fa4d8bffbe53a5e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.devops",
            "module.network.aws_security_group.frontend_alb"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssm_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:388779989543:security-group/sg-0abd99aea51267a9c",
            "description": "Security group for SSM VPC endpoints",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0abd99aea51267a9c",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "HTTPS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "bmi-ssm-endpoint-20260612045540456700000002",
            "name_prefix": "bmi-ssm-endpoint-",
            "owner_id": "388779989543",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "BMI Health Tracker",
              "CostCenter": "Training",
              "Course": "Ostad-DevOps-Batch-11",
              "Name": "bmi-ssm-endpoint-sg",
              "Owner": "osatad",
              "Terraform": "true"
            },
            "tags_all": {
              "Application": "BMI Health Tracker",
              "CostCenter": "Training",
              "Course": "Ostad-DevOps-Batch-11",
              "Environment": "demo",
              "ManagedBy": "Terraform",
              "Name": "bmi-ssm-endpoint-sg",
              "Owner": "osatad",
              "Project": "BMI-AutoScaling",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-08fa4d8bffbe53a5e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.devops"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2messages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:388779989543:vpc-endpoint/vpce-0d7f22fc27101f58a",
            "dns_entry": [
              {
                "dns_name": "vpce-0d7f22fc27101f58a-p2clc6t5.ec2messages.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "vpce-0d7f22fc27101f58a-p2clc6t5-ap-south-1a.ec2messages.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "vpce-0d7f22fc27101f58a-p2clc6t5-ap-south-1b.ec2messages.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "ec2messages.ap-south-1.amazonaws.com",
                "hosted_zone_id": "Z00626181MUOYKF2FJA8U"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0d7f22fc27101f58a",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-02090200b6287bffe",
              "eni-0c466f03b41174a60"
            ],
            "owner_id": "388779989543",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0abd99aea51267a9c"
            ],
            "service_name": "com.amazonaws.ap-south-1.ec2messages",
            "service_region": "ap-south-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.130.232",
                "subnet_id": "subnet-0d596107f4edd9784"
              },
              {
                "ipv4": "10.0.153.246",
                "subnet_id": "subnet-0d666a5e8d8974624"
              }
            ],
            "subnet_ids": [
              "subnet-0d596107f4edd9784",
              "subnet-0d666a5e8d8974624"
            ],
            "tags": {
              "Application": "BMI Health Tracker",
              "CostCenter": "Training",
              "Course": "Ostad-DevOps-Batch-11",
              "Name": "bmi-ec2messages-endpoint",
              "Owner": "osatad",
              "Terraform": "true"
            },
            "tags_all": {
              "Application": "BMI Health Tracker",
              "CostCenter": "Training",
              "Course": "Ostad-DevOps-Batch-11",
              "Environment": "demo",
              "ManagedBy": "Terraform",
              "Name": "bmi-ec2messages-endpoint",
              "Owner": "osatad",
              "Project": "BMI-AutoScaling",
              "Terraform": "true"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-08fa4d8bffbe53a5e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_subnet.private_1a",
            "data.aws_subnet.private_1b",
            "data.aws_vpc.devops",
            "module.network.aws_security_group.ssm_endpoint",
            "module.network.data.aws_region.current"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:388779989543:vpc-endpoint/vpce-0489b2feaf91439ca",
            "dns_entry": [
              {
                "dns_name": "vpce-0489b2feaf91439ca-h8k785pj.ssm.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "vpce-0489b2feaf91439ca-h8k785pj-ap-south-1a.ssm.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "vpce-0489b2feaf91439ca-h8k785pj-ap-south-1b.ssm.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "ssm.ap-south-1.amazonaws.com",
                "hosted_zone_id": "Z00625952MJRHVUWFKZK4"
              },
              {
                "dns_name": "ssm.ap-south-1.api.aws",
                "hosted_zone_id": "Z00646252BHOXQHH1ZNQI"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0489b2feaf91439ca",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-05aa616d9224b6041",
              "eni-0b40bbf2be35eaaee"
            ],
            "owner_id": "388779989543",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0abd99aea51267a9c"
            ],
            "service_name": "com.amazonaws.ap-south-1.ssm",
            "service_region": "ap-south-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.130.245",
                "subnet_id": "subnet-0d596107f4edd9784"
              },
              {
                "ipv4": "10.0.147.71",
                "subnet_id": "subnet-0d666a5e8d8974624"
              }
            ],
            "subnet_ids": [
              "subnet-0d596107f4edd9784",
              "subnet-0d666a5e8d8974624"
            ],
            "tags": {
              "Application": "BMI Health Tracker",
              "CostCenter": "Training",
              "Course": "Ostad-DevOps-Batch-11",
              "Name": "bmi-ssm-endpoint",
              "Owner": "osatad",
              "Terraform": "true"
            },
            "tags_all": {
              "Application": "BMI Health Tracker",
              "CostCenter": "Training",
              "Course": "Ostad-DevOps-Batch-11",
              "Environment": "demo",
              "ManagedBy": "Terraform",
              "Name": "bmi-ssm-endpoint",
              "Owner": "osatad",
              "Project": "BMI-AutoScaling",
              "Terraform": "true"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-08fa4d8bffbe53a5e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_subnet.private_1a",
            "data.aws_subnet.private_1b",
            "data.aws_vpc.devops",
            "module.network.aws_security_group.ssm_endpoint",
            "module.network.data.aws_region.current"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssmmessages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:388779989543:vpc-endpoint/vpce-0cde96e7e7583e5f1",
            "dns_entry": [
              {
                "dns_name": "vpce-0cde96e7e7583e5f1-eovw7jct.ssmmessages.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "vpce-0cde96e7e7583e5f1-eovw7jct-ap-south-1b.ssmmessages.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "vpce-0cde96e7e7583e5f1-eovw7jct-ap-south-1a.ssmmessages.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "ssmmessages.ap-south-1.amazonaws.com",
                "hosted_zone_id": "Z087168124EMLV73F2A9U"
              },
              {
                "dns_name": "ssmmessages.ap-south-1.api.aws",
                "hosted_zone_id": "Z08138393S8F40WAJAXVQ"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0cde96e7e7583e5f1",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-06b83d409ca19a63c",
              "eni-0d52ba5c9eb7ca11b"
            ],
            "owner_id": "388779989543",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0abd99aea51267a9c"
            ],
            "service_name": "com.amazonaws.ap-south-1.ssmmessages",
            "service_region": "ap-south-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.138.145",
                "subnet_id": "subnet-0d596107f4edd9784"
              },
              {
                "ipv4": "10.0.148.249",
                "subnet_id": "subnet-0d666a5e8d8974624"
              }
            ],
            "subnet_ids": [
              "subnet-0d596107f4edd9784",
              "subnet-0d666a5e8d8974624"
            ],
            "tags": {
              "Application": "BMI Health Tracker",
              "CostCenter": "Training",
              "Course": "Ostad-DevOps-Batch-11",
              "Name": "bmi-ssmmessages-endpoint",
              "Owner": "osatad",
              "Terraform": "true"
            },
            "tags_all": {
              "Application": "BMI Health Tracker",
              "CostCenter": "Training",
              "Course": "Ostad-DevOps-Batch-11",
              "Environment": "demo",
              "ManagedBy": "Terraform",
              "Name": "bmi-ssmmessages-endpoint",
              "Owner": "osatad",
              "Project": "BMI-AutoScaling",
              "Terraform": "true"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-08fa4d8bffbe53a5e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_subnet.private_1a",
            "data.aws_subnet.private_1b",
            "data.aws_vpc.devops",
            "module.network.aws_security_group.ssm_endpoint",
            "module.network.data.aws_region.current"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}